--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -2,6 +2,11 @@ body {
   font-family: 'Roboto', sans-serif;
   text-align: center;
   color: #444;
+  margin: 0;
+}
+
+header {
+  margin-top: 24px;
 }
 
 header .logo {
@@ -9,7 +14,7 @@ header .logo {
 }
 
 .products {
-  margin-top: 24px;
+  margin-top: 36px;
   display: flex;
   justify-content: center;
 }
@@ -24,6 +29,7 @@ header .logo {
   overflow-y: scroll;
   padding: 10px;
   border-radius: 2px;
+  max-width: 300px;
 }
 
 .product .votes ul {
@@ -37,6 +43,7 @@ header .logo {
   text-align: left;
   margin: 5px 0;
   text-transform: lowercase;
+  word-wrap: break-word;
 }
 
 .product .votes ul li .user {
@@ -44,27 +51,40 @@ header .logo {
   font-weight: bold;
 }
 
-.vote-form {
-  margin-top: 48px;
+.user-form {
+  margin-top: 100px;
+}
+
+.user-form form div {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  align-content: space-around;
+}
+
+.user-form input[type="text"] {
+  border-radius: 2px 0 0 2px;
+  width: 180px;
+  padding: 8px;
+}
+
+.user-form input[type="submit"] {
+  border-radius: 0 2px 2px 0;
+}
+
+.vote-form {
+  margin: 48px;
 }
 
 .vote-form form {
   max-width: 300px;
   padding: 16px 48px;
   width: 100%;
-  border-top: 1px solid #6cceb5;
-  border-bottom: 1px solid #6cceb5;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
 }
 
 .vote-form div {
   padding: 6px;
-}
-
-.vote-form input, label {
-  border-radius: 2px;
-  font-size: 14px;
 }
 
 .vote-form .product label:first-child {
@@ -79,17 +99,35 @@ header .logo {
   display: block;
   padding: 8px;
   width: 100%;
-  border: 1px solid grey;
 }
 
 .vote-form .submit input {
-  border: 0;
-  background-color: #6cceb5;
+  margin-top: 20px;
+}
+
+.vote-form,
+.user-form {
+  display: flex;
+  justify-content: center;
+}
+
+.vote-form input,
+.user-form input {
+  border: 1px solid #4194d8;
+  border-radius: 2px;
+  font-size: 14px;
+}
+
+.vote-form .submit input,
+.user-form input[type="submit"] {
+  color: white;
+  background-color: #4194d8;
   padding: 8px 12px;
   letter-spacing: .5px;
 }
 
-.vote-form .error {
+.vote-form .error,
+.user-form .error {
   font-size: 12px;
   color: red;
   display: none;
@@ -97,7 +135,8 @@ header .logo {
   margin-top: 12px;
 }
 
-.vote-form .error.show {
+.vote-form .error.show,
+.user-form .error.show {
   display: block;
 }
 
@@ -106,4 +145,50 @@ header .logo {
   font-size: 30px;
   font-weight: 700;
   color: #999;
+}
+
+footer.sticky {
+  position: fixed;
+  bottom: 0;
+}
+
+footer {
+  background-color: #ccc;
+  font-size: 14px;
+  text-align: center;
+  width: 100%;
+  padding: 12px 0;
+  margin-top: 100px;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .social {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-top: 12px;
+}
+
+footer a {
+  color: #555;
+  text-decoration: none;
+}
+
+footer .real-trends {
+  color: #4194d8;
+}
+
+footer img {
+  width: 15px;
+  margin-right: 5px;
+}
+
+footer span {
+  margin: 0 12px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
