--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  margin-top: 24px;
+  margin-top: 12px;
 }
 
 header .logo {
@@ -14,9 +14,13 @@ header .logo {
 }
 
 .poll-buttons {
+  position: absolute;
+  top: 12px;
+  right: 12px;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  /* margin-top: 48px; */
 }
 
 .poll-buttons button {
@@ -49,6 +53,25 @@ header .logo {
 
 .products .product {
   width: 300px;
+  position: relative;
+  padding: 0 12px 12px 12px;
+  z-index: 1;
+}
+
+.products .product .container {
+  background: white;
+  padding: 12px;
+  position: relative;
+  z-index: 1;
+}
+
+.products .product .color {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 0;
+  border-radius: 12px;
 }
 
 .products .product:first-child {
@@ -58,6 +81,14 @@ header .logo {
 .products .product .product-img {
   max-width: 300px;
   max-height: 200px;
+}
+
+.products .product .title {
+  margin-top: 0;
+}
+
+.products .product .description {
+  height: 60px;
 }
 
 .product .votes {
@@ -129,14 +160,15 @@ header .logo {
   padding: 6px;
 }
 
-.vote-form .product label {
-  display: block;
-  text-align: left;
+.vote-form .product {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 12px;
 }
 
-/* .vote-form .product label:first-child {
-  margin-right: 24px;
-} */
+.vote-form .product label:first-child {
+  margin-right: 48px;
+}
 
 .vote-form .product input {
   margin-right: 8px;
@@ -208,6 +240,7 @@ header .logo {
   font-size: 30px;
   font-weight: 700;
   color: #999;
+  margin: 36px 0 12px 0;
 }
 
 footer.sticky {
@@ -257,21 +290,26 @@ footer span {
 }
 
 .modal {
-  display: none;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
-  top: 24px;
+  top: 10px;
   bottom: 100px;
   left: 100px;
   right: 100px;
   padding: 24px;
   background: rgba(113, 216, 191, .9);
   border-radius: 2px;
+  transition: all .5s ease-out;
 }
 
 .modal.show {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  visibility: visible;
+  opacity: 1;
+  top: 24px;
 }
 
 .modal form {
