--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,8 +1,68 @@
+:root {
+  --green-color: #6cceb5;
+  --blue-color: #4194d8;
+  --light-gray: #999;
+  --dark-gray: #444;
+}
+
 body {
+  color: var(--dark-gray);
   font-family: 'Roboto', sans-serif;
-  text-align: center;
-  color: #444;
   margin: 0;
+  text-align: center;
+}
+
+/* Button */
+.button {
+  border-radius: 2px;
+  color: white;
+  cursor: pointer;
+  font-size: 14px;
+  letter-spacing: .5px;
+  padding: 8px 12px;
+}
+
+.button.submit {
+  border-radius: 0 2px 2px 0;
+}
+
+.button img {
+  height: 15px;
+  margin-right: 12px;
+}
+
+/* Blue Button */
+.blue-button {
+  background-color: var(--blue-color);
+  border: 1px solid var(--blue-color);
+}
+
+/* Green Button */
+.green-button {
+  background: var(--green-color);
+  border: 1px solid var(--green-color);
+}
+
+/* Input */
+.input-text {
+  border-radius: 2px 0 0 2px;
+  border: 1px solid var(--blue-color);
+  font-size: 14px;
+  padding: 8px;
+  width: 180px;
+}
+
+/* Errors */
+.error {
+  color: red;
+  display: none;
+  font-size: 12px;
+  margin-top: 12px;
+  margin: 0;
+}
+
+.error.show {
+  display: block;
 }
 
 header {
@@ -13,48 +73,16 @@ header .logo {
   width: 250px;
 }
 
-.poll-buttons {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  /* margin-top: 48px; */
-}
-
-.poll-buttons button {
-  background: #71d8bf;
-  color: white;
-  /* background-color: #4194d8; */
-  padding: 8px 12px;
-  letter-spacing: .5px;
-  border: 1px solid #71d8bf;
-  border-radius: 2px;
-  font-size: 14px;
-  cursor: pointer;
-  display: flex;
-}
-
-.poll-buttons button:nth-child(2) {
-  margin: 0 12px;
-}
-
-.poll-buttons button img {
-  height: 15px;
-  margin-right: 12px;
-}
-
 .products {
-  margin-top: 36px;
   display: flex;
   justify-content: center;
+  margin-top: 36px;
 }
 
 .products .product {
-  width: 300px;
-  position: relative;
   padding: 0 12px 12px 12px;
+  position: relative;
+  width: 300px;
   z-index: 1;
 }
 
@@ -66,12 +94,12 @@ header .logo {
 }
 
 .products .product .color {
-  position: absolute;
-  left: 0;
+  border-radius: 12px;
   bottom: 0;
+  left: 0;
+  position: absolute;
   width: 100%;
   z-index: 0;
-  border-radius: 12px;
 }
 
 .products .product:first-child {
@@ -79,8 +107,8 @@ header .logo {
 }
 
 .products .product .product-img {
-  max-width: 300px;
   max-height: 200px;
+  max-width: 300px;
 }
 
 .products .product .title {
@@ -92,31 +120,52 @@ header .logo {
 }
 
 .product .votes {
-  border: 1px solid grey;
+  border-radius: 2px;
+  border: 1px solid var(--light-gray);
   height: 150px;
+  max-width: 300px;
   overflow-y: scroll;
   padding: 10px;
-  border-radius: 2px;
-  max-width: 300px;
 }
 
 .product .votes ul {
+  font-size: 14px;
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
-  font-size: 14px;
 }
 
 .product .votes ul li {
-  text-align: left;
   margin: 5px 0;
+  text-align: left;
   text-transform: lowercase;
   word-wrap: break-word;
 }
 
 .product .votes ul li .user {
-  color: #6cceb5;
+  color: var(--green-color);
   font-weight: bold;
+}
+
+.product .percentage p {
+  color: var(--light-gray);
+  font-family: 'Press Start 2P', cursive;
+  font-size: 30px;
+  font-weight: 700;
+  margin: 36px 0 12px 0;
+}
+
+.poll-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: absolute;
+  right: 12px;
+  top: 12px;
+}
+
+.poll-buttons button:nth-child(2) {
+  margin: 0 12px;
 }
 
 .user-form,
@@ -126,22 +175,10 @@ header .logo {
 
 .user-form form div,
 .modal form div {
+  align-content: space-around;
   display: flex;
   flex-direction: row;
-  align-content: space-around;
   justify-content: center;
-}
-
-.user-form input[type="text"],
-.modal input[type="text"] {
-  border-radius: 2px 0 0 2px;
-  width: 180px;
-  padding: 8px;
-}
-
-.user-form input[type="submit"],
-.modal input[type="submit"] {
-  border-radius: 0 2px 2px 0;
 }
 
 .vote-form {
@@ -149,11 +186,11 @@ header .logo {
 }
 
 .vote-form form {
+  border-bottom: 1px solid var(--light-gray);
+  border-top: 1px solid var(--light-gray);
   max-width: 500px;
   padding: 16px 48px;
   width: 100%;
-  border-top: 1px solid #999;
-  border-bottom: 1px solid #999;
 }
 
 .vote-form div {
@@ -190,126 +227,27 @@ header .logo {
   justify-content: center;
 }
 
-.vote-form input,
-.user-form input,
-.modal input,
-.search-products,
-.modal .products .product .select-product {
-  border: 1px solid #4194d8;
-  border-radius: 2px;
-  font-size: 14px;
-}
-
-.vote-form .submit input,
-.user-form input[type="submit"],
-.modal input[type="submit"],
-.search-products,
-.modal .products .product .select-product {
-  color: white;
-  background-color: #4194d8;
-  padding: 8px 12px;
-  letter-spacing: .5px;
-}
-
-.vote-form .submit input:hover,
-.user-form input[type="submit"]:hover,
-.modal input[type="submit"]:hover,
-.search-products:hover,
-.modal .products .product .select-product:hover {
-  cursor: pointer;
-}
-
-.vote-form .error,
-.user-form .error,
-.modal .error {
-  font-size: 12px;
-  color: red;
-  display: none;
-  margin: 0;
-  margin-top: 12px;
-}
-
-.vote-form .error.show,
-.user-form .error.show,
-.modal .error.show {
-  display: block;
-}
-
-.percentage p {
-  font-family: 'Press Start 2P', cursive;
-  font-size: 30px;
-  font-weight: 700;
-  color: #999;
-  margin: 36px 0 12px 0;
-}
-
-footer.sticky {
-  position: fixed;
-  bottom: 0;
-}
-
-footer {
-  background-color: #ccc;
-  font-size: 14px;
-  text-align: center;
-  width: 100%;
-  padding: 12px 0;
-  margin-top: 100px;
-}
-
-footer p {
-  margin: 0;
-}
-
-footer .social {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin-top: 12px;
-}
-
-footer a {
-  color: #555;
-  text-decoration: none;
-}
-
-footer .real-trends {
-  color: #4194d8;
-}
-
-footer img {
-  width: 15px;
-  margin-right: 5px;
-}
-
-footer span {
-  margin: 0 12px;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-}
-
 .modal {
-  display: flex;
-  flex-direction: column;
   align-items: flex-start;
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  top: 10px;
-  bottom: 100px;
-  left: 100px;
-  right: 100px;
-  padding: 24px;
   background: rgba(113, 216, 191, .9);
   border-radius: 2px;
+  bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  left: 100px;
+  opacity: 0;
+  padding: 24px;
+  position: absolute;
+  right: 100px;
+  top: 10px;
   transition: all .5s ease-out;
+  visibility: hidden;
 }
 
 .modal.show {
-  visibility: visible;
   opacity: 1;
   top: 24px;
+  visibility: visible;
 }
 
 .modal form {
@@ -317,34 +255,34 @@ footer span {
 }
 
 .modal .products {
+  border-radius: 2px;
   overflow-y: scroll;
   width: 100%;
-  border-radius: 2px;
 }
 
 .modal .products ul {
-  width: 100%;
   list-style: none;
-  text-align: left;
   margin: 0;
   padding: 0;
+  text-align: left;
+  width: 100%;
 }
 
 .modal .products .product {
-  margin: 10px;
-  padding: 5px 10px;
-  display: flex;
+  align-items: center;
   background-color: white;
   border-radius: 2px;
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  margin: 10px;
+  padding: 5px 10px;
   width: auto;
 }
 
 .modal .products .product .product-data {
-  display: flex;
   align-items: center;
+  display: flex;
 }
 
 .modal .products .product .thumbnail {
@@ -358,9 +296,9 @@ footer span {
 
 .modal .products .product .price,
 .modal .products .product .location {
-  color: #555555;
-  display: flex;
   align-items: center;
+  color: var(--dark-gray);
+  display: flex;
   font-size: 14px;
   margin: 3px 0;
 }
@@ -388,13 +326,57 @@ footer span {
 } 
 
 .modal .products .product .select-product {
-  background-color: #71d8bf;
-  border: 1px solid #71d8bf;
   margin-right: 24px;
 }
 
 .modal .products .product .select-product.selected {
-  background-color: #999;
-  border: 1px solid #999;
+  background-color: var(--light-gray);
+  border: 1px solid var(--light-gray);
   cursor: not-allowed;
+}
+
+footer.sticky {
+  bottom: 0;
+  position: fixed;
+}
+
+footer {
+  background-color: #ccc;
+  font-size: 14px;
+  margin-top: 100px;
+  padding: 12px 0;
+  text-align: center;
+  width: 100%;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .social {
+  align-content: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 12px;
+}
+
+footer a {
+  color: var(--dark-gray);
+  text-decoration: none;
+}
+
+footer .real-trends {
+  color: var(--blue-color);
+}
+
+footer img {
+  margin-right: 5px;
+  width: 15px;
+}
+
+footer span {
+  align-content: center;
+  display: flex;
+  justify-content: center;
+  margin: 0 12px;
 }
